--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 body {
   margin: auto;
   font-family: "Arial", sans-serif;
-  background-color: rgb(179, 0, 0);
+  background-color: rgb(161, 0, 0);
 }
 
 img {
   background-image: url(imgs/top.jpg);
   background-repeat: no-repeat;
-  background-size: 80%;
+  display: block;
+  margin: 0 auto;
 }
 
 .bannerimg {
@@ -15,16 +16,30 @@ img {
 }
 
 .bannertext {
+  font-family: cursive;
   position: absolute;
-  top: 5%;
+  font-size: 55px;
+  top: 2%;
+  left: 37%;
+  right: 0;
+  margin: auto;
   padding: 2%;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 .secondbannerimg {
   position: absolute;
   bottom: 0;
   padding: 3%;
-  width: 200px;
+  width: 400px;
   clip-path: circle(30%);
   background-color: white;
+}
+
+.infobox {
+  width: 500px;
+  border: 15px solid rgb(255, 255, 255);
+  padding: 80px;
+  margin: 20px;
+  background-color: #ffffff;
 }
