--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ img {
   border: 15px solid rgb(255, 255, 255);
   padding: 80px;
   margin: 20px;
-  background-color: #ffffff;
+  background-color: aqua;
 }
 
 .infobox {
