--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ img {
   padding: 3%;
   width: 400px;
   clip-path: circle(30%);
-  background-color: white;
+  background-color: aqua;
 }
 
 .infobox {
