--- a/styles.css
+++ b/styles.css
@@ -41,14 +41,43 @@ img {
 .infobox {
   width: 500px;
   border: 15px solid rgb(255, 255, 255);
-  padding: 80px;
-  margin: 20px;
+  padding: 5px;
+  margin: 20px auto;
   background-color: aqua;
   font-family: cursive;
-  width: 450px;
   border: 15px solid rgb(255, 255, 255);
-  padding: 10px;
-  margin: 20px auto;
   background-color: rgb(175, 32, 32);
   font-size: large;
+}
+
+#procedures1 {
+  width: 255px;
+  padding: 5%;
+  margin: auto;
+  border: 15px solid rgb(255, 255, 255);
+  float: left;
+}
+
+#procedures2 {
+  width: 255px;
+  padding: 5%;
+  margin: auto;
+  border: 15px solid rgb(255, 255, 255);
+  float: left;
+}
+
+#procedures3 {
+  width: 255px;
+  padding: 5%;
+  margin: auto;
+  border: 15px solid rgb(255, 255, 255);
+  float: left;
+}
+
+#procedures4 {
+  width: 255px;
+  padding: 5%;
+  margin: auto;
+  border: 15px solid rgb(255, 255, 255);
+  float: left;
 }
