--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ img {
   margin: auto;
   border: 15px solid rgb(255, 255, 255);
   float: left;
+  font-family: cursive;
 }
 
 #procedures2 {
@@ -64,6 +65,7 @@ img {
   margin: auto;
   border: 15px solid rgb(255, 255, 255);
   float: left;
+  font-family: cursive;
 }
 
 #procedures3 {
@@ -72,6 +74,7 @@ img {
   margin: auto;
   border: 15px solid rgb(255, 255, 255);
   float: left;
+  font-family: cursive;
 }
 
 #procedures4 {
@@ -80,4 +83,5 @@ img {
   margin: auto;
   border: 15px solid rgb(255, 255, 255);
   float: left;
+  font-family: cursive;
 }
