--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ img {
   margin: auto;
   border: 15px solid rgb(255, 255, 255);
   float: left;
+  background-color: aqua;
   font-family: cursive;
 }
 
@@ -65,6 +66,7 @@ img {
   margin: auto;
   border: 15px solid rgb(255, 255, 255);
   float: left;
+  background-color: aqua;
   font-family: cursive;
 }
 
@@ -74,6 +76,7 @@ img {
   margin: auto;
   border: 15px solid rgb(255, 255, 255);
   float: left;
+  background-color: aqua;
   font-family: cursive;
 }
 
@@ -83,5 +86,6 @@ img {
   margin: auto;
   border: 15px solid rgb(255, 255, 255);
   float: left;
+  background-color: aqua;
   font-family: cursive;
 }
