--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ img {
   margin: auto;
   border: 15px solid rgb(255, 255, 255);
   float: left;
-  background-color: rgb(0, 185, 185);
+  background-color: aqua;
   font-family: cursive;
 }
 
@@ -66,7 +66,7 @@ img {
   margin: auto;
   border: 15px solid rgb(255, 255, 255);
   float: left;
-  background-color: rgb(0, 185, 185);
+  background-color: aqua;
   font-family: cursive;
 }
 
@@ -76,7 +76,7 @@ img {
   margin: auto;
   border: 15px solid rgb(255, 255, 255);
   float: left;
-  background-color: rgb(0, 185, 185);
+  background-color: aqua;
   font-family: cursive;
 }
 
