--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ img {
   font-family: cursive;
   background-image: url(imgs/endermologia.webp);
   background-size: contain;
-  background-position: left;
+  background-position: right;
   background-repeat: no-repeat;
 }
 
@@ -72,6 +72,10 @@ img {
   float: left;
   background-color: rgb(175, 31, 32);
   font-family: cursive;
+  background-image: url(imgs/carboxterapia.jpg);
+  background-size: contain;
+  background-position: left;
+  background-repeat: no-repeat;
 }
 
 #procedures3 {
@@ -82,6 +86,7 @@ img {
   float: left;
   background-color: rgb(175, 31, 32);
   font-family: cursive;
+  background-image: url(imgs/drenagens.jpg);
 }
 
 #procedures4 {
@@ -92,4 +97,5 @@ img {
   float: left;
   background-color: rgb(175, 31, 32);
   font-family: cursive;
+  background-image: url(imgs/radiofrequencia.jpeg);
 }
