--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,11 @@ img {
   background-size: contain;
 }
 
+.procedures2 img {
+  width: 100%;
+  height: auto;
+}
+
 .procedures3 {
   flex: 1 0 200px; /* Adjust the width to fit your desired layout */
   padding: 7%;
