--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,11 @@ img {
   background-size: contain;
 }
 
+.procedures1 img {
+  width: 100%;
+  height: auto;
+}
+
 .procedures2 {
   flex: 1 0 200px; /* Adjust the width to fit your desired layout */
   padding: 7%;
