--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ img {
 }
 
 .procedures1 {
-  flex: 1 0 200px; /* Adjust the width to fit your desired layout */
+  flex: 1 0 200px;
   padding: 7%;
   margin: 0px;
   border: 8px solid rgb(255, 255, 255);
@@ -76,7 +76,7 @@ img {
 }
 
 .procedures2 {
-  flex: 1 0 200px; /* Adjust the width to fit your desired layout */
+  flex: 1 0 200px;
   padding: 7%;
   margin: 0px;
   border: 8px solid rgb(255, 255, 255);
