--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ img {
 }
 
 .procedures3 {
-  flex: 1 0 200px; /* Adjust the width to fit your desired layout */
+  flex: 1 0 200px;
   padding: 7%;
   margin: 0px;
   border: 8px solid rgb(255, 255, 255);
@@ -108,7 +108,7 @@ img {
 }
 
 .procedures4 {
-  flex: 1 0 200px; /* Adjust the width to fit your desired layout */
+  flex: 1 0 200px;
   padding: 7%;
   margin: 0px;
   border: 8px solid rgb(255, 255, 255);
