--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,7 @@ img {
 .procedures1 img {
   width: 100%;
   height: auto;
+  display: flex;
 }
 
 .procedures2 {
@@ -84,6 +85,7 @@ img {
   font-family: cursive;
   background-repeat: no-repeat;
   background-size: contain;
+  display: flex;
 }
 
 .procedures2 img {
