--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ img {
   font-size: large;
 }
 
-.flex-container {
+.grid2x2 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -71,7 +71,7 @@ img {
 }
 
 .procedures1 img {
-  width: 100%;
+  width: auto;
   height: auto;
   display: flex;
 }
@@ -89,7 +89,7 @@ img {
 }
 
 .procedures2 img {
-  width: 100%;
+  width: auto;
   height: auto;
 }
 
