--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,7 @@ img {
 .procedures2 img {
   width: auto;
   height: auto;
+  display: flex;
 }
 
 .procedures3 {
@@ -108,6 +109,7 @@ img {
 .procedures3 img {
   width: auto;
   height: auto;
+  display: flex;
 }
 
 .procedures4 {
