2x2 grid corrections and completion

--- a/styles.css
+++ b/styles.css
@@ -59,73 +59,36 @@ img {
   width: 900px;
 }
 
-.procedures1 {
-  flex: 1 0 200px;
-  padding: 7%;
-  margin: 0px;
-  border: 8px solid rgb(255, 255, 255);
-  background-color: rgb(175, 31, 32);
-  font-family: cursive;
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-.procedures1 img {
-  width: auto;
-  height: auto;
+.grid-row {
   display: flex;
+  flex-basis: 100%;
 }
 
-.procedures2 {
-  flex: 1 0 200px;
-  padding: 7%;
-  margin: 0px;
-  border: 8px solid rgb(255, 255, 255);
-  background-color: rgb(175, 31, 32);
-  font-family: cursive;
-  background-repeat: no-repeat;
-  background-size: contain;
-  display: flex;
-}
-
-.procedures2 img {
-  width: auto;
-  height: auto;
-  display: flex;
-}
-
-.procedures3 {
-  flex: 1 0 200px;
-  padding: 7%;
-  margin: 0px;
-  border: 8px solid rgb(255, 255, 255);
-  background-color: rgb(175, 31, 32);
-  font-family: cursive;
-  background-repeat: no-repeat;
-  background-size: contain;
-  display: flex;
-}
-
-.procedures3 img {
-  width: auto;
-  height: auto;
-  display: flex;
-}
-
+.procedures1,
+.procedures2,
+.procedures3,
 .procedures4 {
-  flex: 1 0 200px;
+  flex-basis: 50%;
   padding: 7%;
-  margin: 0px;
+  margin: 0;
   border: 8px solid rgb(255, 255, 255);
   background-color: rgb(175, 31, 32);
   font-family: cursive;
   background-repeat: no-repeat;
   background-size: contain;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
 }
 
+.procedures1 img,
+.procedures2 img,
+.procedures3 img,
 .procedures4 img {
-  width: auto;
+  width: 100%;
   height: auto;
-  display: flex;
+  margin-bottom: 10px;
 }
