--- a/styles.css
+++ b/styles.css
@@ -55,8 +55,8 @@ img {
   flex-wrap: wrap;
   justify-content: center;
   align-items: flex-start;
-  margin: 20px auto;
-  width: 900px;
+  margin: 10px auto;
+  width: auto;
 }
 
 .grid-row {
