--- a/styles.css
+++ b/styles.css
@@ -77,15 +77,15 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  text-align: center;
+  align-items: left;
+  text-align: right;
   color: white;
 }
 
 .procedures3,
 .procedures4 {
   flex-basis: 50%;
-  padding: 7%;
+  padding: 50px;
   margin: 0;
   border: 8px solid rgb(255, 255, 255);
   background-color: rgb(175, 31, 32);
@@ -95,8 +95,8 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  text-align: center;
+  align-items: left;
+  text-align: right;
   color: white;
 }
 
@@ -104,7 +104,7 @@ img {
 .procedures2 img,
 .procedures3 img,
 .procedures4 img {
-  width: 100%;
+  width: 80%;
   height: auto;
   margin-bottom: 10px;
 }
