--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ img {
   justify-content: center;
   align-items: flex-start;
   margin: 10px auto;
-  width: auto;
+  width: 50%;
 }
 
 .grid-row {
@@ -66,8 +66,10 @@ img {
 
 .procedures1,
 .procedures2 {
-  flex-basis: 50%;
-  padding: 7%;
+  flex-basis: auto;
+  width: 900px;
+  height: 250px;
+  padding: 5%;
   margin: 0;
   border: 8px solid rgb(255, 255, 255);
   background-color: rgb(175, 31, 32);
@@ -76,16 +78,18 @@ img {
   background-size: contain;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: left;
   text-align: right;
   color: white;
+  overflow: hidden;
 }
 
 .procedures3,
 .procedures4 {
-  flex-basis: 50%;
-  padding: 50px;
+  flex-basis: auto;
+  width: 900px;
+  height: 250px;
+  padding: 5%;
   margin: 0;
   border: 8px solid rgb(255, 255, 255);
   background-color: rgb(175, 31, 32);
@@ -94,17 +98,18 @@ img {
   background-size: contain;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+
   align-items: left;
   text-align: right;
   color: white;
+  overflow: hidden;
 }
 
 .procedures1 img,
 .procedures2 img,
 .procedures3 img,
 .procedures4 img {
-  width: 80%;
-  height: auto;
-  margin-bottom: 10px;
+  width: 70%;
+  height: 600px;
+  margin-bottom: 1px;
 }
