--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ body {
   justify-content: center;
   align-items: flex-start;
   margin: 10px auto;
-  width: 50%;
+  width: 100%;
 }
 
 .grid-row {
@@ -69,7 +69,22 @@ body {
   flex-basis: 100%;
 }
 
-.procedure {
+.procedure1,
+.procedure2 {
+  flex-basis: 50%;
+  padding: 5%;
+  border: 8px solid rgb(255, 255, 255);
+  background-color: rgb(175, 31, 32);
+  font-family: cursive;
+  color: white;
+  overflow: hidden;
+  display: flex;
+  justify-content: left;
+  text-align: right;
+}
+
+.procedure3,
+.procedure4 {
   flex-basis: 50%;
   padding: 5%;
   margin: 0;
@@ -79,12 +94,18 @@ body {
   color: white;
   overflow: hidden;
   display: flex;
-  flex-direction: column;
   align-items: flex-start;
-  text-align: right;
 }
 
-.procedure img {
+.procedure1 img,
+.procedure2 img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.procedure3 img,
+.procedure4 img {
   width: 100%;
   height: auto;
   margin-bottom: 10px;
